...
  // Create and launch sign-in intent
  val signInIntent =
      AuthUI.getInstance().createSignInIntentBuilder().setAvailableProviders(providers).build()

  OutlinedButton(
      onClick = { signInLauncher.launch(signInIntent) },
      modifier = modifier.testTag("googleAuthenticationButton")) {
        Row {
          Image(
              painter = painterResource(id = R.drawable.google_logo),
              contentDescription = "Google Logo",
              modifier = Modifier.size(40.dp).align(Alignment.CenterVertically))
          Text(
              text = stringResource(id = R.string.sign_in_with_google),
              modifier = Modifier.align(Alignment.CenterVertically).padding(start = 25.dp))
        }
      }
...
